--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,11 @@
     </dependencies>
     <build>
         <plugins>
+		<plugin>
+                  <groupId>org.codehaus.mojo</groupId>
+                  <artifactId>sonar-maven-plugin</artifactId>
+                  <version>3.0.2</version>
+                </plugin>
             <plugin>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.2</version>
